--- a/.classpath
+++ b/.classpath
@@ -11,7 +11,6 @@
 	<classpathentry kind="lib" path="C:/Java/Libraries/jtds-1.2.5.jar"/>
 	<classpathentry kind="lib" path="C:/Java/Libraries/mysql-connector-java-5.1.7-bin.jar"/>
 	<classpathentry kind="lib" path="C:/Java/Libraries/javamail-1.4.4/mail.jar"/>
-	<classpathentry kind="lib" path="C:/Java/Libraries/gzutil-1.0-28-05-12.jar"/>
 	<classpathentry kind="lib" path="C:/Java/Libraries/XLS/poi-3.8-beta5/poi-3.8-beta5-20111217.jar"/>
 	<classpathentry kind="lib" path="C:/Java/Libraries/commons-beanutils-1.8.3.jar"/>
 	<classpathentry kind="lib" path="C:/Java/Libraries/commons-collections-3.2.1.jar"/>
@@ -21,5 +20,6 @@
 	<classpathentry kind="lib" path="C:/Java/Libraries/jasperreports-4.5.1.jar"/>
 	<classpathentry kind="lib" path="C:/Java/Libraries/PDF/itext-2.1.7.jar"/>
 	<classpathentry kind="lib" path="C:/Java/Libraries/GZ Migration/gzreport.jar"/>
+	<classpathentry kind="lib" path="C:/Java/Libraries/gzutil20120704.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
