Adicionando diagramas UML

--- a/.classpath
+++ b/.classpath
@@ -18,8 +18,8 @@
 	<classpathentry kind="lib" path="C:/Java/Libraries/groovy-all-1.7.5.jar"/>
 	<classpathentry kind="lib" path="C:/Java/Libraries/jasperreports-4.5.1.jar"/>
 	<classpathentry kind="lib" path="C:/Java/Libraries/PDF/itext-2.1.7.jar"/>
-	<classpathentry kind="lib" path="C:/Java/Libraries/GZ Migration/gzreport.jar"/>
 	<classpathentry kind="lib" path="lib/img.jar"/>
 	<classpathentry kind="lib" path="C:/Java/Libraries/gzutil20120725.jar"/>
+	<classpathentry kind="lib" path="lib/report.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
