--- a/.classpath
+++ b/.classpath
@@ -2,24 +2,23 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre6"/>
-	<classpathentry kind="lib" path="C:/Java/Libraries/database-connections-1.0.jar"/>
-	<classpathentry kind="lib" path="C:/Java/Libraries/jgoodies-looks-2.4.2.jar"/>
-	<classpathentry kind="lib" path="C:/Java/Libraries/jgoodies-common-1.2.1.jar"/>
-	<classpathentry kind="lib" path="C:/Java/Libraries/PDF/itextpdf-5.2.1.jar"/>
-	<classpathentry kind="lib" path="C:/Java/Libraries/mercoflex-database-V255.jar"/>
-	<classpathentry kind="lib" path="C:/Java/Libraries/jtds-1.2.5.jar"/>
-	<classpathentry kind="lib" path="C:/Java/Libraries/mysql-connector-java-5.1.7-bin.jar"/>
-	<classpathentry kind="lib" path="C:/Java/Libraries/javamail-1.4.4/mail.jar"/>
-	<classpathentry kind="lib" path="C:/Java/Libraries/XLS/poi-3.8-beta5/poi-3.8-beta5-20111217.jar"/>
-	<classpathentry kind="lib" path="C:/Java/Libraries/commons-beanutils-1.8.3.jar"/>
-	<classpathentry kind="lib" path="C:/Java/Libraries/commons-collections-3.2.1.jar"/>
-	<classpathentry kind="lib" path="C:/Java/Libraries/commons-digester-2.1.jar"/>
-	<classpathentry kind="lib" path="C:/Java/Libraries/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Java/Libraries/groovy-all-1.7.5.jar"/>
-	<classpathentry kind="lib" path="C:/Java/Libraries/jasperreports-4.5.1.jar"/>
-	<classpathentry kind="lib" path="C:/Java/Libraries/PDF/itext-2.1.7.jar"/>
+	<classpathentry kind="lib" path="D:/Java/Libraries/JDBC/database-connections-1.0.jar"/>
+	<classpathentry kind="lib" path="D:/Java/Libraries/JGoodies/jgoodies-looks-2.4.2.jar"/>
+	<classpathentry kind="lib" path="D:/Java/Libraries/JGoodies/jgoodies-common-1.2.1.jar"/>
+	<classpathentry kind="lib" path="D:/Java/Libraries/ITextPDF/itextpdf-5.2.1.jar"/>
+	<classpathentry kind="lib" path="D:/Java/Libraries/JDBC/jtds-1.2.5.jar"/>
+	<classpathentry kind="lib" path="D:/Java/Libraries/JDBC/mysql-connector-java-5.1.7-bin.jar"/>
+	<classpathentry kind="lib" path="D:/Java/Libraries/JavaMail/mail.jar"/>
+	<classpathentry kind="lib" path="D:/Java/Libraries/POI/poi-3.8-beta5/poi-3.8-beta5-20111217.jar"/>
+	<classpathentry kind="lib" path="D:/Java/Libraries/Commons/commons-beanutils-1.8.3.jar"/>
+	<classpathentry kind="lib" path="D:/Java/Libraries/Commons/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="D:/Java/Libraries/Commons/commons-digester-2.1.jar"/>
+	<classpathentry kind="lib" path="D:/Java/Libraries/Commons/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="D:/Java/Libraries/Groovy/groovy-all-1.7.5.jar"/>
+	<classpathentry kind="lib" path="D:/Java/Libraries/JasperReports/jasperreports-4.5.1.jar"/>
+	<classpathentry kind="lib" path="D:/Java/Libraries/ITextPDF/itext-2.1.7.jar"/>
 	<classpathentry kind="lib" path="lib/img.jar"/>
-	<classpathentry kind="lib" path="C:/Java/Libraries/gzutil20120725.jar"/>
+	<classpathentry kind="lib" path="D:/Java/Libraries/GZ Utilities/gzutil20120725.jar"/>
 	<classpathentry kind="lib" path="lib/report.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
